# diffdesk

./: .gitignore  LICENSE  README.md  ROADMAP.md  pyproject.toml
examples/: sample.patch
scripts/: capture_project_image.py  generate_project_image.py
src/diffdesk/: __init__.py  __main__.py  app.py  cli.py  db.py  diff_parse.py  models.py
src/diffdesk/static/css/: app.css
src/diffdesk/static/js/: app.js
src/diffdesk/templates/: base.html  dashboard.html  error.html  review_detail.html  review_new.html  reviews.html  settings.html
tests/: test_api.py  test_db.py  test_diff_parse.py
